Now precog has excellent syntax error reporting!

--- a/xc/precog.xcodeproj/xcshareddata/xcschemes/precog.xcscheme
+++ b/xc/precog.xcodeproj/xcshareddata/xcschemes/precog.xcscheme
@@ -73,7 +73,7 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "--clean"
-            isEnabled = "NO">
+            isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-onina.arm64"
