Fixed the double "Frameworks" group.

--- a/xc/precog.xcodeproj/xcshareddata/xcschemes/precog.xcscheme
+++ b/xc/precog.xcodeproj/xcshareddata/xcschemes/precog.xcscheme
@@ -73,7 +73,7 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "--clean"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-onina.arm64"
