Fixed everything, except debug: that disappeared!

--- a/xc/precog.xcodeproj/xcshareddata/xcschemes/precog.xcscheme
+++ b/xc/precog.xcodeproj/xcshareddata/xcschemes/precog.xcscheme
@@ -91,6 +91,10 @@
             argument = "--cross=x86_64,pc,linux,elf"
             isEnabled = "NO">
          </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--pbx"
+            isEnabled = "YES">
+         </CommandLineArgument>
       </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
